@@ -4,6 +4,9 @@ Changelog for CMFFormController
 
 CMFFormController 2.0.5 - Unreleased
 
+    - Fixed some deprecation warnings for CompilerError.
+      [hannosch]
+
     - Cleaned up test infrastructure, removed custom testrunner.
       [hannosch]
 
